# FunkinPS1-public

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md
XMLDesigner/: .gitignore  findbyname.lua  hsl.lua  main.lua  sheet.lua  striputf.lua  vram.lua
assets/chr/: DADDY_DEAREST.xml  loader.xml
assets/msh/: combo.xml
assets/msh/icons/: icon-bf-old.xml  icon-bf.xml  icon-dad.xml
assets/msh/week1/: stageback.xml  stagecurtains.xml  stagefront.xml
assets/spr/: bold.xml  main_menu.xml  menuDesat.xml  newgrounds_logo.xml  score.xml
chr/: Bf.xml  Dad.xml  Gf.xml  GfTitle.xml  Loader.xml  Pico.xml
msh/: Combo.xml  Logo.xml  Note.xml  NoteSplash.xml
msh/Icons/: IconBf.xml  IconBfOld.xml  IconDad.xml
msh/Week1/: StageBack.xml  StageCurtains.xml  StageFront.xml
spr/: Bold.xml  MainMenu.xml  MenuDesat.xml  Score.xml
src/: CMakeLists.txt  Funkin.xml
src/Boot/: CDP.cpp  CDP.h  Character.cpp  Character.h  Compress.cpp  Compress.h  DATracker.cpp  DATracker.h  Font.h  Funkin.cpp  Funkin.h  Hash.h  Loader.cpp  Loader.h  MMP.cpp  MMP.h  Profiler.cpp  Profiler.h  Random.cpp  Random.h  Timer.cpp  Timer.h  Wipe.cpp  Wipe.h
src/Menu/: Menu.cpp  Menu.h  OpeningSubstate.cpp  OpeningSubstate.h  TitleSubstate.cpp  TitleSubstate.h
src/PlayState/: Camera.cpp  Camera.h  Combo.cpp  Combo.h  Object.cpp  Object.h  PlayState.cpp  PlayState.h  Singer.cpp  Singer.h
src/Week1/: Week1.cpp
tools/: CMakeLists.txt
tools/MkChr/: MkChr.cpp
tools/MkCht/: MkCht.cpp
tools/MkDma/: MkDma.cpp
tools/MkHeader/: MkHeader.cpp
tools/MkIcon/: MkIcon.cpp
tools/MkPkg/: MkPkg.cpp
tools/MkSpr/: MkSpr.cpp
tools/MkSym/: MkSym.cpp
tools/lib/FunkinAlgo/: FunkinAlgo.cpp  FunkinAlgo.h
tools/lib/clownlzss/: clownlzss.h  comper.cpp
